完成上传和裁减图片
计划明天完成订单

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -318,6 +318,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="upimages\crop\" />
+    <Folder Include="upimages\showcrop\" />
     <Folder Include="upimages\zoom\" />
   </ItemGroup>
   <ItemGroup>
