--- a/Web/Web.config
+++ b/Web/Web.config
@@ -13,5 +13,7 @@
             <error statusCode="403" redirect="NoAccess.htm" />
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
+      <pages>
+      </pages>
     </system.web>
 </configuration>
