前台页面基本完成，没有加验证

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -339,6 +339,7 @@
     <Content Include="js\uploadify\check-exists.php" />
     <Content Include="js\uploadify\uploadify.php" />
     <Content Include="upimg.ashx" />
+    <Content Include="js\jquery.kcly.js" />
     <None Include="Properties\PublishProfiles\f.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
