--- a/Web/Web.config
+++ b/Web/Web.config
@@ -1,7 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
+    <!--数据-->
     <add key="Data" value="freePhoto"/>
+    
+    <!--邮件服务器-->
+    <add key="SmtpServer" value="smtp.163.com"/>
+    <!--发件人名称-->
+    <add key="FromName" value="测试"/>
+    <!--用户名-->
+    <add key="SmtpUserName" value="lc_liuyang@163.com"/>
+    <!--密码-->
+    <add key="SmtpPwd" value="liu_yang3027"/>
+    
+    <!--激活邮件中的html-->
+    <add key="RegHtml" value="/SmtpHtml/activate.html"/>
+    <!--修改密码的html-->
+    <add key="CPwdHtml" value="/SmtpHtml/changepwd.html"/>
+    
+    <!--合作身份者ID，以2088开头由16位纯数字组成的字符串 2088002490000296-->
+    <add key="partner" value="2088801187953415"/>
+    <!--交易安全检验码，由数字和字母组成的32位字符串 28iqn08eleh5xbswgv0wz4n3d7qunlnt-->
+    <add key="key" value="ll1tc3m59z2is15d24ohqlo36ckfix5t"/>
+    <!--签约支付宝账号或卖家支付宝帐户  8200070@qq.com -->
+    <add key="seller_email" value="zzfinfo@163.com"/>
+
+    <!--create_partner_trade_by_buyer担保   create_direct_pay_by_user即时支付-->
+    <add key="Alipay_Config" value="create_direct_pay_by_user"/>
+    <!--页面跳转同步返回页面文件路径 要用 http://格式的完整路径，不允许加?id=123这类自定义参数-->
+    <add key="return_url" value="http://user.cnnmo.com/service/alipay/return_url.ashx"/>
+    <!--服务器通知的页面文件路径 要用 http://格式的完整路径，不允许加?id=123这类自定义参数-->
+    <add key="notify_url" value="http://user.cnnmo.com/service/alipay/notify_url.ashx"/>
   </appSettings>
     <system.web>
         <compilation debug="true">
