--- a/Web/Web.config
+++ b/Web/Web.config
@@ -3,6 +3,8 @@
   <appSettings>
     <!--数据-->
     <add key="Data" value="freePhoto"/>
+    <!--数据-->
+    <add key="MainStore" value="2"/>
 
     <!--邮件服务器-->
     <add key="SmtpServer" value="smtp.163.com"/>
