--- a/Web/Web.config
+++ b/Web/Web.config
@@ -22,11 +22,11 @@
     <add key="Sys_CPwdHtml" value="/SmtpHtml/adminrpwd.html"/>
 
     <!--合作身份者ID，以2088开头由16位纯数字组成的字符串 2088002490000296-->
-    <add key="partner" value="2088801187953415"/>
+    <add key="partner" value="2088011609945454"/>
     <!--交易安全检验码，由数字和字母组成的32位字符串 28iqn08eleh5xbswgv0wz4n3d7qunlnt-->
-    <add key="key" value="ll1tc3m59z2is15d24ohqlo36ckfix5t"/>
+    <add key="key" value="z64v0dhfy6zehzjtboc0z5rd22mttzzr"/>
     <!--签约支付宝账号或卖家支付宝帐户  8200070@qq.com -->
-    <add key="seller_email" value="zzfinfo@163.com"/>
+    <add key="seller_email" value="zfb@pentike.com"/>
 
     <!--create_partner_trade_by_buyer担保   create_direct_pay_by_user即时支付-->
     <add key="Alipay_Config" value="create_direct_pay_by_user"/>
